--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "saml2-js": "^4.0.2",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "xml-crypto": "^6.0.0",
+    "xmlbuilder": "^15.1.1"
   }
 }
